# cppedal

./: .gitignore  CMakeLists.txt  README.md  TODO  cppedal.json  get_third_party.sh  makefile  run-clang-format.sh
effects/: CMakeLists.txt
effects/bitcruncher/: CMakeLists.txt  bit_library.cpp  bit_library.hpp
effects/boost/: CMakeLists.txt  boost_library.cpp  boost_library.hpp
effects/clean/: CMakeLists.txt  clean.cpp  clean.hpp  clean_library.cpp  clean_library.hpp
effects/delay/: CMakeLists.txt  library.cpp  library.hpp
effects/fuzz/: CMakeLists.txt  fuzz_library.cpp  fuzz_library.hpp
effects/include/cppedal/effect/: effect.hpp  effect_library.hpp
effects/octaver/: CMakeLists.txt  library.cpp  library.hpp
effects/src/: effect.cpp  effect_library.cpp
framer/: CMakeLists.txt  effect_container.cpp  effect_container.hpp  framer.cpp  framer.hpp  framer_config.hpp  main.cpp
ingestors/include/cppedal/ingestor/: ingestor.hpp
ingestors/mcp3002/: CMakeLists.txt  mcp3002.cpp  mcp3002.hpp
ingestors/mcp6002/: mcp6002_ingestor.cpp
input/: CMakeLists.txt  README.MD
input/include/cppedal/input/: input.hpp  push_button.hpp  rotary_encoder.hpp
input/rpi/: CMakeLists.txt  rpi_push_button.cpp  rpi_push_button.hpp  rpi_rotary_encoder.cpp  rpi_rotary_encoder.hpp
input/rpizero/: CMakeLists.txt  rpizero_push_button.cpp  rpizero_push_button.hpp  rpizero_rotary_encoder.cpp  rpizero_rotary_encoder.hpp
lcd/: CMakeLists.txt
lcd/include/cppedal/lcd/: lcd.hpp
lcd/lcd_1602/: CMakeLists.txt  lcd_1602.cpp  lcd_1602.hpp
lcd/lcd_1602_zero/: lcd_1602.cpp  lcd_1602.hpp
pwm-output/: CMakeLists.txt
pwm-output/include/cppedal/pwm_output/: pwm_output.hpp
pwm-output/rpi-single/: CMakeLists.txt  rpi-single.cpp  rpi-single.hpp
pwm-output/rpi-single-softpwm/: CMakeLists.txt  rpi-single.cpp  rpi-single.hpp
pwm-output/rpizero-single/: CMakeLists.txt  rpizero-single.cpp  rpizero-single.hpp
